# bat

./: .gitignore  .gitleaks.toml  CHANGELOG.md  README.md  autoresearch.ideas.md  autoresearch.jsonl  autoresearch.md  biome.json  osv-scanner.toml  package.json  pnpm-lock.yaml  skills-lock.json  turbo.json
.agents/skills/uptime-kuma/: README.md  SKILL.md  config.json
.agents/skills/uptime-kuma/scripts/: socketio-client.mjs
.claude/: CLAUDE.md
.claude/plans/: gleaming-sniffing-flurry.md
.claude/skills/: uptime-kuma
.github/workflows/: ci.yml  release.yml
.husky/: pre-commit  pre-push
docs/: 01-metrics-catalogue.md  01-probe-metrics-spec.md  02-architecture-and-implementation.md  02-architecture.md  03-data-structures.md  04-probe.md  05-worker.md  06-dashboard.md  06-ui.md  07-testing.md  08-commits.md  09-tier3-signals.md  10-host-inventory.md  11-host-tags.md  12-software-discovery.md  13-host-events.md  14-top-processes.md  15-enhanced-software-and-websites.md  16-monitoring-api.md  17-maintenance-window.md  18-quality-system-upgrade.md  19-edge-dashboard.md  19-edge-deployment.md  20-d1-to-kv-migration.md  README.md
docs/archive/: 06-dashboard-nextjs.md
probe/: Cargo.toml  Dockerfile.build  install.sh
probe/src/: command.rs  config.rs  main.rs  orchestrate.rs  payload.rs  rate.rs  sender.rs
probe/src/collectors/: conntrack.rs  cpu.rs  disk.rs  disk_io.rs  fd.rs  identity.rs  inventory.rs  memory.rs  mod.rs  netstat.rs  network.rs  psi.rs  snmp.rs  softnet.rs  tcp.rs  top_processes.rs
probe/src/collectors/tier2/: disk_deep.rs  docker.rs  mod.rs  ports.rs  security.rs  software.rs  systemd.rs  updates.rs  websites.rs
scripts/: autoresearch-bench.sh  check-coverage.sh  check-page-coverage.ts  check-route-coverage.ts  ci-pre-command.sh  l3-seed.sql  l3-setup.sh  release.ts  resize-logos.py  run-security.ts  sync-version.sh  verify-test-bindings.ts
