[package]
name = "bat-probe"
version = "0.7.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["rt", "time", "signal", "macros", "process"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
libc = "0.2"
nix = { version = "0.30", features = ["fs"] }
url = "2"

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tokio = { version = "1", features = ["test-util"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cast_precision_loss = "allow"
cast_sign_loss = "allow"
similar_names = "allow"
future_not_send = "allow"

[profile.release]
opt-level = "z"
lto = true
strip = true
codegen-units = 1
